<?xml version="1.0" encoding="utf-8"?>
<!-- Die Wurzel des Layouts ist ein ConstraintLayout, das eine flexiblere Positionierung der enthaltenen Ansichten ermöglicht. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <!-- Ein TextView zur Anzeige des Titels eines Todo. -->
    <TextView
        android:id="@+id/tvMealTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Example"
        android:textSize="15sp"

        app:layout_constraintEnd_toStartOf="@+id/cbDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Eine CheckBox, die den Zustand (erledigt/nicht erledigt) eines Todo anzeigt. -->
    <CheckBox
        android:id="@+id/cbDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvMealTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvMealTitle" />

    <TableLayout
        android:id="@+id/tblDailys"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMealTitle"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/tvKcal1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTblKcal"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="0"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_column="1"
                android:layout_weight="2" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/tvFat"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTblFat"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="0.0"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="2" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/tvProtein"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTblPro"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="0.0"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="2" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/tvSugar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTblSug"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="0.0"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_column="1"
                android:layout_weight="2" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

